# minigpu

./: .gitignore  GPU_ML_PLAN.md  Makefile  README.md  release.py
docs/: miniav_minigpu_interop.md  multi_tenant_virtualization.txt
gpu_ml/: README.md  pubspec.yaml  pubspec_overrides.yaml
gpu_ml/docs/: QWEN35MOE_SEMANTICS.md
gpu_ml/example/: web_smoke.dart
gpu_ml/lib/: gpu_ml.dart  gpu_ml_io.dart
gpu_ml/lib/src/: bpe_tokenizer.dart  gguf.dart  gguf_stream.dart  gpu_attn.dart  gpu_delta_net.dart  gpu_moe.dart  gpu_nn.dart  gpu_quant.dart  quant_cpu.dart  qwen35_runner.dart
gpu_ml/test/: generation_e2e_test.dart  gguf_quant_test.dart  gpu_nn_test.dart  kquant_real_test.dart  llama_block_test.dart  moe_test.dart  quant_test_utils.dart  qwen_layers_test.dart  real_model_smoke_test.dart  web_compile_smoke_test.dart
gpu_ml/tool/: gguf_inspect.dart  probe_moe.dart
gpu_tensor/: CHANGELOG.md  README.md  UPDATE_PLAN.md  pubspec.yaml  pubspec_overrides.yaml
gpu_tensor/example/: gpu_tensor_example.dart
gpu_tensor/example/flutter_example/: pubspec.yaml
gpu_tensor/example/flutter_example/integration_test/: tensor_crash_test.dart  tensor_test.dart
gpu_tensor/example/flutter_example/lib/: main.dart
gpu_tensor/example/flutter_example/test/: widget_test.dart
gpu_tensor/lib/: gpu_tensor.dart
gpu_tensor/lib/src/: gpu_activation.dart  gpu_data.dart  gpu_helpers.dart  gpu_linear_ops.dart  gpu_ops.dart  gpu_pooling.dart  gpu_print.dart  gpu_tensor_base.dart  gpu_transform.dart
gpu_tensor/test/: fft_plan_test.dart  fft_reference_test.dart  gpu_activation_test.dart  gpu_crash_test.dart  gpu_data_test.dart  gpu_debug_test.dart  gpu_ops_test.dart  gpu_tensor_test.dart  gpu_transform_memory_test.dart  gpu_transform_test.dart  gpu_types_test.dart  gpu_ui_test.dart  phase3_reference_test.dart  shader_cache_test.dart
minigpu/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
minigpu/example/: pubspec.yaml  pubspec_overrides.yaml
minigpu/example/ios/Runner.xcodeproj/: project.pbxproj
minigpu/example/lib/: main.dart  main_old.dart
minigpu/example/macos/Runner.xcodeproj/: project.pbxproj
minigpu/example/test/: widget_test.dart
minigpu/lib/: minigpu.dart
minigpu/lib/src/: buffer.dart  compute_shader.dart  minigpu.dart  shared_output_texture.dart  video_texture.dart
minigpu/test/: minigpu_adapter_selection_test.dart  minigpu_buffer_size_test.dart  minigpu_buffer_test.dart  minigpu_copy_buffer_test.dart  minigpu_dispatch_test.dart  minigpu_memory_test.dart  minigpu_packing_test.dart  minigpu_perf_test.dart  minigpu_race_condition_test.dart  minigpu_shared_output_texture_test.dart  minigpu_test.dart  minigpu_types_test.dart  minigpu_video_texture_test.dart
minigpu_ffi/: CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
minigpu_ffi/hook/: build.dart
minigpu_ffi/lib/: minigpu_ffi.dart  minigpu_ffi_bindings.dart
minigpu_ffi/src/: CMakeLists.txt
minigpu_ffi/src/cmake/: dawn.cmake  gpu.cmake
minigpu_ffi/src/include/: buffer.h  compute_shader.h  conversion_kernels.h  gpuh.h  log.h  minigpu.h  minigpu_external.h  mutex.h  platform_sleep.h
minigpu_ffi/src/src/: buffer.cpp  compute_shader.cpp  conversion_kernels.cpp  minigpu.cpp  minigpu_external.cpp  yuv_helpers.wgsl
minigpu_ffi/src/test/: external_texture_test.cpp  minigpu_test.cpp
minigpu_ffi/test/: decode_c_string_test.dart
minigpu_flutter/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml  pubspec_overrides.yaml
minigpu_flutter/lib/: minigpu_flutter.dart
minigpu_flutter/lib/src/: minigpu_flutter_binding.dart
minigpu_platform_interface/: CHANGELOG.md  pubspec.yaml
minigpu_platform_interface/lib/: minigpu_platform_interface.dart
minigpu_view/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml  pubspec_overrides.yaml
minigpu_view/android/: build.gradle  settings.gradle
minigpu_view/android/src/main/: AndroidManifest.xml
minigpu_view/android/src/main/kotlin/dev/minigpu/view/: MinigpuViewPlugin.kt
minigpu_view/example/: .metadata  README.md  pubspec.yaml  pubspec_overrides.yaml
minigpu_view/example/lib/: main.dart
minigpu_view/example/test/: widget_test.dart
minigpu_view/example/web/: index.html  manifest.json
minigpu_view/example/windows/: CMakeLists.txt
minigpu_view/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
minigpu_view/example/windows/runner/: Runner.rc  main.cpp
minigpu_view/ios/: minigpu_view.podspec
minigpu_view/ios/Classes/: MinigpuViewPlugin.swift
minigpu_view/lib/: minigpu_view.dart
minigpu_view/lib/src/: exceptions.dart  preview_controller.dart  preview_source.dart  preview_widget.dart
minigpu_view/lib/src/adapters/: miniav_adapter.dart  minigpu_adapter.dart
minigpu_view/lib/src/web/: minigpu_view_web.dart
minigpu_view/linux/: CMakeLists.txt  minigpu_view_plugin.cc
minigpu_view/macos/: minigpu_view.podspec
minigpu_view/macos/Classes/: MinigpuViewPlugin.swift
minigpu_view/windows/: CMakeLists.txt  d3d11_texture_handler.cpp  d3d11_texture_handler.h  minigpu_view_plugin.cpp  minigpu_view_plugin_impl.h
minigpu_view/windows/include/minigpu_view/: minigpu_view_plugin.h
minigpu_web/: CHANGELOG.md  dart_test.yaml  pubspec.yaml  pubspec_overrides.yaml
minigpu_web/lib/: minigpu_web.dart
minigpu_web/lib/bindings/: minigpu_bindings.dart  webgpu_interop.dart
minigpu_web/lib/web/: minigpu_web.js  minigpu_web.ww.js
minigpu_web/test/: crosscoder_blob_test.dart  web_smoke_test.dart
